src/mmgroup/dev/c_files/mat24_functions.h

MAT24_API
uint32_t mat24_lsbit24(uint32_t v1);
MAT24_API
uint32_t mat24_bw24(uint32_t v1);
MAT24_API
uint32_t mat24_syndrome(uint32_t v1, uint32_t u_tetrad);
MAT24_API
uint32_t mat24_op_vect_perm(uint32_t v1, uint8_t *p1);
MAT24_API
uint32_t mat24_op_gcode_matrix(uint32_t v1, uint32_t *m1);
MAT24_API
uint32_t mat24_op_gcode_perm(uint32_t v1, uint8_t *p1);
MAT24_API
uint32_t mat24_op_cocode_perm(uint32_t c1, uint8_t *p1);
MAT24_API
void mat24_mul_perm(uint8_t *p1, uint8_t *p2, uint8_t *p_out);
MAT24_API
void mat24_inv_perm(uint8_t *p1, uint8_t *p_out);
MAT24_API
void mat24_autpl_set_qform(uint32_t *m_io);
MAT24_API
void mat24_perm_to_autpl(uint32_t c1, uint8_t *p1, uint32_t *m_out);
MAT24_API
void mat24_cocode_to_autpl(uint32_t c1, uint32_t *m_out);
MAT24_API
void mat24_autpl_to_perm(uint32_t *m1, uint8_t  *p_out);
MAT24_API
uint32_t mat24_autpl_to_cocode(uint32_t *m1);
MAT24_API
uint32_t mat24_op_ploop_autpl(uint32_t v1, uint32_t *m1);
MAT24_API
void mat24_mul_autpl(uint32_t *m1, uint32_t *m2, uint32_t *m_out);
MAT24_API
void mat24_inv_autpl(uint32_t *m1, uint32_t *m_out);
MAT24_API
void mat24_perm_to_iautpl(uint32_t c1, uint8_t *p1, uint8_t *p_o, uint32_t *m_o);
MAT24_API
void mat24_perm_to_net(uint8_t *p1, uint32_t *a_out);
MAT24_API
void mat24_op_all_autpl(uint32_t *m1, uint16_t *a_out);
MAT24_API
void mat24_op_all_cocode(uint32_t c1, uint8_t *a_out);