src/mmgroup/dev/mat24/mat24fast.pyx


###########################################################################
# Mathieu group M24: Mapping a dodecad
###########################################################################



def perm_from_dodecads(d1, d2):
    cdef uint8_t d1a[9]
    cdef uint8_t *p_d1a = d1a
    cdef uint8_t d2a[9]
    cdef uint8_t *p_d2a = d2a 
    cdef uint8_t p1[24]
    cdef uint8_t *p_p1 = p1
    cdef int i
    for i in range(9):
        d1a[i] = int(d1[i]) 
        d2a[i] = int(d2[i]) 
    cdef uint32_t res = mat24_perm_from_dodecads(p_d1a, p_d2a, p_p1)
    if res:
        err = "Cannot construct permutation in Mat24 from dodecads"
        raise ValueError(err)
    return [p1[i] for i in range(24)] 




###########################################################################
# Mathieu group M24: operation of group elements
###########################################################################


def op_vect_perm(uint32_t v1, p1):
    cdef uint8_t p1a[24]
    cdef uint8_t *p_p1a = p1a
    cdef int i
    for i in range(24): p1a[i] = int(p1[i])
    return mat24_op_vect_perm(v1, p_p1a)



def op_gcode_matrix(uint32_t v1, m1):
    cdef uint32_t m1a[12]
    cdef uint32_t *p_m1a = m1a
    cdef int i
    for i in range(12): m1a[i] = int(m1[i])
    return mat24_op_gcode_matrix(v1,  p_m1a)


def op_gcode_perm(uint32_t v1, p1):
    cdef uint8_t p1a[24]
    cdef uint8_t *p_p1a = p1a
    cdef int i
    for i in range(24): p1a[i] = int(p1[i])
    return mat24_op_gcode_perm(v1, p_p1a)




def op_cocode_perm(uint32_t c1, p1):
    cdef uint8_t p1a[24]
    cdef uint8_t *p_p1a = p1a
    cdef int i
    for i in range(24): p1a[i] = int(p1[i])
    return mat24_op_cocode_perm(c1, p_p1a)



def mul_perm(p1, p2):
    cdef uint8_t pp1[24]
    cdef uint8_t *p_pp1 = pp1
    cdef uint8_t pp2[24]
    cdef uint8_t *p_pp2 = pp2
    cdef uint8_t pp3[24]
    cdef uint8_t *p_pp3 = pp3
    cdef int i
    for i in range(24): 
        pp1[i] = int(p1[i])
        pp2[i] = int(p2[i])
    mat24_mul_perm(p_pp1, p_pp2, p_pp3)
    return [pp3[i] for i in range(24)]


def inv_perm(p1):
    cdef uint8_t pp1[24]
    cdef uint8_t *p_pp1 = pp1
    cdef uint8_t pp2[24]
    cdef uint8_t *p_pp2 = pp2
    cdef int i
    for i in range(24): 
        pp1[i] = int(p1[i])
    mat24_inv_perm(p_pp1, p_pp2)
    return [pp2[i] for i in range(24)]


###########################################################################
# Automorphisms of the Parker Loop
###########################################################################
 


def autpl_set_qform(m_io):
    cdef uint32_t m_ioa[12]
    cdef uint32_t *p_m_ioa = m_ioa
    cdef int i
    for i in range(12): m_ioa[i] = int(m_io[i])
    mat24_autpl_set_qform(p_m_ioa)
    for i in range(12): m_io[i] = int(m_ioa[i])
    return m_io



def perm_to_autpl(c1, p1):
    cdef uint8_t p1a[24]
    cdef uint8_t *p_p1a = p1a
    cdef uint32_t m1[12]
    cdef uint32_t *p_m1 = m1
    cdef int i
    for i in range(24): p1a[i] = int(p1[i])
    mat24_perm_to_autpl(int(c1), p_p1a, p_m1)
    return [m1[i] for i in range(12)]


def cocode_to_autpl(c1):
    cdef uint32_t m1[12]
    cdef uint32_t *p_m1 = m1
    mat24_cocode_to_autpl(int(c1), p_m1)
    return [m1[i] for i in range(12)]



def autpl_to_perm(m1):
    cdef uint32_t m1a[12]
    cdef uint32_t *p_m1a = m1a
    cdef uint8_t p1[24]
    cdef uint8_t *p_p1 = p1
    cdef int i
    for i in range(12): m1a[i] = int(m1[i])
    mat24_autpl_to_perm(p_m1a, p_p1)
    return [p1[i] for i in range(24)]


def autpl_to_cocode(m1):
    cdef uint32_t m1a[12]
    cdef uint32_t *p_m1a = m1a
    cdef int i
    for i in range(12): m1a[i] = int(m1[i])
    return mat24_autpl_to_cocode(p_m1a)



def op_ploop_autpl(v1, m1):
    cdef uint32_t m1a[12]
    cdef uint32_t *p_m1a = m1a
    cdef int i
    for i in range(12): m1a[i] = int(m1[i])
    return mat24_op_ploop_autpl(v1, p_m1a)


def mul_autpl(m1, m2):
    cdef uint32_t m1a[12]
    cdef uint32_t *p_m1a = m1a
    cdef uint32_t m2a[12]
    cdef uint32_t *p_m2a = m2a
    cdef uint32_t m3a[12]
    cdef uint32_t *p_m3a = m3a
    cdef int i
    for i in range(12): 
        m1a[i] = int(m1[i])
        m2a[i] = int(m2[i])
    mat24_mul_autpl(m1a, m2a, m3a)
    return [m3a[i] for i in range(12)]


def inv_autpl(m1):
    cdef uint32_t m1a[12]
    cdef uint32_t *p_m1a = m1a
    cdef uint32_t m2a[12]
    cdef uint32_t *p_m2a = m2a
    cdef int i
    for i in range(12): 
        m1a[i] = int(m1[i])
    mat24_inv_autpl(m1a, m2a)
    return [m2a[i] for i in range(12)]



def perm_to_iautpl(c1, p1):
    cdef uint8_t p1a[24]
    cdef uint8_t *p_p1a = p1a
    cdef uint32_t m1[12]
    cdef uint32_t *p_m1 = m1
    cdef uint8_t pi[24]
    cdef uint8_t *p_pi = pi
    cdef int i
    for i in range(24): p1a[i] = int(p1[i])
    mat24_perm_to_iautpl(int(c1), p_p1a, p_pi, p_m1)
    return [pi[i] for i in range(24)], [m1[i] for i in range(12)]






###########################################################################
# Auxiliary functions for the Monster group
#
# These functions are not available in class mmgroup.dev.mat24_ref.Mat24
###########################################################################


def perm_to_net(p1):
    cdef uint8_t p[24]
    cdef uint8_t *p_p = p
    cdef uint32_t res[9]
    cdef uint32_t *p_res =res
    cdef int i
    for i in range(24):
        p[i] = p1[i]
    mat24_perm_to_net(p_p, p_res)
    return [res[i] for i in range(9)]





def op_all_autpl(m1):
    cdef uint32_t pm[12]
    cdef uint32_t *p_pm = pm
    cdef uint16_t res[2048]
    cdef uint16_t *p_res = res
    cdef int i
    for i in range(12):
        pm[i] = m1[i]
    mat24_op_all_autpl(p_pm, p_res)
    return [res[i] for i in range(2048)]



def op_all_cocode(c1):
    cdef uint8_t res[2048]
    cdef uint8_t *p_res = res
    cdef uint32_t c1i = c1
    cdef int i
    mat24_op_all_cocode(c1i, p_res)
    return [res[i] for i in range(2048)]




###########################################################################
# Functions from file mat24_random.ske
###########################################################################



cdef extern from "mat24_functions.h":
    uint32_t  MAT24_RAND_2, MAT24_RAND_o, MAT24_RAND_t
    uint32_t  MAT24_RAND_s, MAT24_RAND_l, MAT24_RAND_3

MAT24_RAND = {
    '2' : MAT24_RAND_2,
    'o' : MAT24_RAND_o,
    't' : MAT24_RAND_t,
    's' : MAT24_RAND_s,
    'l' : MAT24_RAND_l,
    '3' : MAT24_RAND_3,
}



def complete_rand_mode(uint32_t u_mode):
    cdef uint32_t res = mat24_complete_rand_mode(u_mode)
    return res


def perm_in_local(p1):
    cdef uint8_t p1a[24]
    cdef int i
    for i in range(24): p1a[i] = int(p1[i])
    cdef uint32_t res = mat24_perm_in_local(p1a)
    return res

ERR_MAT24_RANDOM = "Generation of random permutation in Mat24 has failed"

def perm_rand_local(uint32_t u_mode, uint32_t u_rand):
    cdef uint8_t p1a[24]
    cdef uint8_t *p_p1a = p1a
    cdef int32_t res = mat24_perm_rand_local(u_mode, u_rand, p_p1a)
    if res:
        raise ValueError(ERR_MAT24_RANDOM)
    cdef int i
    return [p1a[i] for i in range(24)]

def m24num_rand_local(uint32_t u_mode, uint32_t u_rand):
    cdef int32_t res = mat24_m24num_rand_local(u_mode, u_rand)
    if res < 0:
        raise ValueError(ERR_MAT24_RANDOM)
    return res

def m24num_rand_adjust_xy(uint32_t u_mode, uint32_t v):
    cdef int32_t res = mat24_m24num_rand_adjust_xy(u_mode, v)
    if res < 0:
        raise ValueError(ERR_MAT24_RANDOM)
    return res




########################################################################
########################################################################
# The following stuff is experimental and not documented officially 
########################################################################
########################################################################



cpdef uint32_t Mat24Sub_vtype(uint32_t x):
    """returns type of bit vector in GF(2)**24. 

    This is either (w,d,y), 0 <= d <= 3,  or (w,4,t)

    Here w is the bit weight of vector v. In the first case, there
    is a unique syndrome s(x) of x of weight d, 0 <= d <= 3, and
    the weight of x & s(x) is equal to y in case w <= 12 and to
    d - y in case w >= 12.
    In the second case the syndrome may be any of a tetrad of 
    six vectors s_i of length 4 with disjoint support. In case 
    w = 12, the value  t is the number of vectors s_i completely 
    contained in x. For other values of w the value t is zero.
  
    It is well known that all vectors of the same type are
    in one orbit of the automorphism group of the Golay code.

    The tuple is returned in the form  (w << 5 ) + (d << 2) + y .
    """
    cdef uint32_t w, s, d, y,  rest
    w = mat24_bw24(x)
    s = mat24_syndrome(x,0)
    d = mat24_bw24(s)
    if d < 4: 
        y =  mat24_bw24(x & s) 
        if w >= 12: y = d - y
    elif w != 12: 
        y = 0
    else: 
        y, rest = 0 + (s == x & s),  x & ~s & 0xffffff 
        while rest:
            s =  mat24_syndrome(x, mat24_lsbit24(rest))
            y +=  s == x & s  
            rest &= ~s
    return ( (w << 5 ) + (d << 2) + y )



def Mat24Sub_count_vtypes():
     cdef uint32_t a[8000]
     cdef uint32_t n
     for n in range(8000):
         a[n] = 0 
     for n in range(0x1000000):
         a[Mat24Sub_vtype(n)] += 1     
     d =  {}
     for n in range(8000):
        if a[n] > 0:
            d[ (n>>5, (n>>2) & 7, n & 3) ] = a[n]
     return d

     
       
